Remove Collections.emptyMap()