@@ -539,7 +539,7 @@ public class SolrConfig implements MapSerializable {
         // TODO: we should be explicitly looking for file not found exceptions
         // and logging if it's not the expected IOException
         // hopefully no problem, assume no overlay.json file
-        return new ConfigOverlay(Collections.emptyMap(), -1);
+        return new ConfigOverlay(Map.of(), -1);
       }
 
       int version = 0;
@@ -564,7 +564,7 @@ public class SolrConfig implements MapSerializable {
     }
   }
 
-  private Map<String, InitParams> initParams = Collections.emptyMap();
+  private Map<String, InitParams> initParams = Map.of();
 
   public Map<String, InitParams> getInitParams() {
     return initParams;
