@@ -22,7 +22,6 @@ import static org.apache.solr.handler.designer.SchemaDesignerAPI.getConfigSetZkP
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -83,8 +82,7 @@ class SchemaDesignerSettingsDAO implements SchemaDesignerConstants {
     boolean changed = false;
 
     ConfigOverlay overlay = getConfigOverlay(configSet);
-    Map<String, Object> storedUserProps =
-        overlay != null ? overlay.getUserProps() : Collections.emptyMap();
+    Map<String, Object> storedUserProps = overlay != null ? overlay.getUserProps() : Map.of();
     for (Map.Entry<String, Object> e : settings.toMap().entrySet()) {
       String key = e.getKey();
       Object propValue = e.getValue();
@@ -118,8 +116,7 @@ class SchemaDesignerSettingsDAO implements SchemaDesignerConstants {
     } catch (IOException exc) {
       log.error("Failed to get config overlay for {}", configSet, exc);
     }
-    Map<String, Object> userProps =
-        overlay != null ? overlay.getUserProps() : Collections.emptyMap();
+    Map<String, Object> userProps = overlay != null ? overlay.getUserProps() : Map.of();
     return SchemaDesignerSettings.getSettingAsBool(userProps, DESIGNER_KEY + DISABLED, false);
   }
 
